--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/9f428b9c2c.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="main.js" defer></script>
   <script src="login.js" defer></script>
-
   
+
   <title>Book Ducks - Login</title>
 </head>
 <body>
@@ -19,11 +20,18 @@
     <div>
       <div name="logo">
         <a href="index.html"><img class="header" src="./img/default_logo.png" alt="book_duck_logo"></a>
+        <a href="index.html"><img class="headerDark hidden" src="./img/logo_darkmode.png" alt="book_duck_logo"></a>
+        <a href="index.html"><img class="headerPink hidden" src="./img/logo_pink.png" alt="book_duck_logo"></a>
       </div>
       <nav>
         <a href="register.html" class="registerLink">Sign Up</a>
       </nav>
   </header>
+
+  <div class="booksContainer hidden"></div>
+  <h2 class="welcome hidden"></h2>
+  <p id="siteDesc" class="hidden"></p>
+  <img class="bigDuck hidden" src="./img/icon _duck.svg" alt="duck" >
 
   <div class="loginForm">
     <div class="form-box">
@@ -61,12 +69,18 @@
         
         <div class="footer-middle">
           <a href="index.html"><img class="footer" src="./img/default_logo.png" alt="book_duck_logo"></a>
+          <a href="index.html"><img class="footerDark hidden" src="./img/logo_darkmode.png" alt="book_duck_logo"></a>
+          <a href="index.html"><img class="footerPink hidden" src="./img/logo_pink.png" alt="book_duck_logo"></a>
           <div class="download">
             <a href="#"><img class="playStore" src="./img/Play_Store.png" alt="playStore"></a>
             <a href="#"><img class="appStore" src="./img/App_Store.png" alt="appStore"></a>
+            <a href="#"><img class="playStoreDark hidden" src="./img/Play_Store_Dark.png" alt="playStore"></a>
+            <a href="#"><img class="appStoreDark hidden" src="./img/App_Store_Dark.png" alt="appStore"></a>
+            <a href="#"><img class="playStorePink hidden" src="./img/Play_Store_pink.png" alt="playStore"></a>
+            <a href="#"><img class="appStorePink hidden" src="./img/App_Store_pink.png" alt="appStore"></a>
           </div>
-      
         </div>
+
         <div class="footer-socialMedia">
           <div id="facebook">
             <i class="fa-brands fa-facebook"></i>
