--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -20,8 +20,6 @@
     <div>
       <div name="logo">
         <a href="index.html"><img class="header" src="./img/default_logo.png" alt="book_duck_logo"></a>
-        <a href="index.html"><img class="headerDark hidden" src="./img/logo_darkmode.png" alt="book_duck_logo"></a>
-        <a href="index.html"><img class="headerPink hidden" src="./img/logo_pink.png" alt="book_duck_logo"></a>
       </div>
       <nav>
         <a href="javascript:logout();" class="logoutLink">Logout</a>
@@ -50,9 +48,9 @@
     <div>
       <label>Filters :</label>
       <select class="sorting1">
-        <option>Title</option>
-        <option>Author</option>
-        <option>Rating</option>
+        <option value="Title">Title</option>
+        <option value="Author">Author</option>
+        <option value="Rating">Rating</option>
       </select>
     </div>
     <div>
@@ -66,9 +64,9 @@
     <div>
       <label>Filters :</label>
       <select class="sorting2">
-        <option>Title</option>
-        <option>Author</option>
-        <option>Rating</option>
+        <option value="Title">Title</option>
+        <option value="Author">Author</option>
+        <option value="Rating">Rating</option>
       </select>
     </div>
     <div>
@@ -86,15 +84,9 @@
     </nav>
     <div class="footer-middle">
       <a href="index.html"><img class="footer" src="./img/default_logo.png" alt="book_duck_logo"></a>
-      <a href="index.html"><img class="footerDark hidden" src="./img/logo_darkmode.png" alt="book_duck_logo"></a>
-      <a href="index.html"><img class="footerPink hidden" src="./img/logo_pink.png" alt="book_duck_logo"></a>
       <div class="download">
         <a href="#"><img class="playStore" src="./img/Play_Store.png" alt="playStore"></a>
         <a href="#"><img class="appStore" src="./img/App_Store.png" alt="appStore"></a>
-        <a href="#"><img class="playStoreDark hidden" src="./img/Play_Store_Dark.png" alt="playStore"></a>
-        <a href="#"><img class="appStoreDark hidden" src="./img/App_Store_Dark.png" alt="appStore"></a>
-        <a href="#"><img class="playStorePink hidden" src="./img/Play_Store_pink.png" alt="playStore"></a>
-        <a href="#"><img class="appStorePink hidden" src="./img/App_Store_pink.png" alt="appStore"></a>
       </div>
     </div>
     <div class="footer-socialMedia">
